# contacts

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.rst  bootstrap  docker-compose.yml  schema.sql  setup.cfg  setup.py
contacts/: app.py  db.py  handlers.py
docs/: conf.py  custom.css
tests/: __init__.py  test_contacts.py  test_database_connection.py  test_entrypoint.py  test_status_endpoint.py
