[metadata]
name = contacts
version = attr:contacts.version
description = Simple contact information manager.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/dave-shawley/contacts
author = Dave Shawley
author_email = daveshawley@gmail.com
license = BSD
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
platforms = any

[options]
packages =
    contacts
install_requires =
    sprockets.http==1.5.0

[options.entry_points]
console_scripts =
    contacts-api = contacts.app:main
