[metadata]
name = contacts
version = attr:contacts.version
description = Simple contact information manager.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/dave-shawley/contacts
author = Dave Shawley
author_email = daveshawley@gmail.com
license = BSD
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
platforms = any

[options]
packages =
    contacts
install_requires =
    aiopg==1.0.0
    ietfparse==1.6.1
    sprockets.http==2.1.1
    sprockets.mixins.mediatype==3.0.1
    tornado==6.0.1
    tornado-problem-details==0.0.6

[options.entry_points]
console_scripts =
    contacts-api = contacts.app:entry_point

[options.extras_require]
dev =
    coverage==5.0.3
    flake8
    nose==1.3.7
    sphinx==2.4.3
    yapf==0.29.0

#==============================================================================
[coverage:report]
show_missing = 1

[flake8]
exclude = build,env

[nosetests]
cover-branches = 1
cover-erase = 1
cover-html = 1
cover-html-dir = build/coverage
cover-min-percentage = 100
cover-package = contacts

[yapf]
allow_multiline_dictionary_keys = True
allow_split_before_dict_value = False
